@@ -1,3 +1,12 @@
+2008-02-27  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V01-02-00
+	* add state transition E->F when edm failure detected 
+	* added separate flashlists for numerical microstates and legenda
+	* split web page in two, moved module description vector to data member
+	* use TimeProfilerService to get timing info in web page
+	* updated icons
+	
 2007-11-28  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V01-01-04
